[package]
name = "tokio-icmp-echo"
version = "0.4.2"
license = "MIT/Apache-2.0"
authors = ["Fedor Gogolev <knsd@knsd.net>", "Jan Christian Grünhage <jan.christian@gruenhage.xyz"]
documentation = "https://docs.rs/tokio-icmp-echo"
repository = "https://github.com/jcgruenhage/tokio-icmp-echo"
description = "Asynchronous ICMP pinging library"
keywords = ["tokio", "icmp", "ping"]
categories = ["network-programming", "asynchronous"]
edition = "2021"

[dependencies]
kanal = "0.1.0-pre8"
futures = "0.3"
libc = "0.2"
mio = { version = "1", features = ["os-ext"] }
rand = "0.8"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["rt", "time", "net"] }
parking_lot = "0.12"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }

[patch.crates-io]
tokio = { version = "1.38.1", git = "https://github.com/MTaliancich/tokio.git", rev = "18d8292" }